# src/main/resources/swagger/webshop_swagger.yaml
@@ -42,6 +42,31 @@ paths:
             $ref: "#/definitions/Product"
         400:
           description: "Invalid input"
+  /product/{productId}:
+    get:
+      tags:
+        - "product"
+      summary: "Find product by ID"
+      description: "Returns a single product"
+      operationId: "getProductById"
+      produces:
+        - "application/json"
+      parameters:
+        - name: "productId"
+          in: "path"
+          description: "ID of product to return"
+          required: true
+          type: "integer"
+          format: "int64"
+      responses:
+        200:
+          description: "successful operation"
+          schema:
+            $ref: "#/definitions/Product"
+        400:
+          description: "Invalid ID supplied"
+        404:
+          description: "Product not found"
 definitions:
   Product2Create:
     type: "object"
